--- a/style.css
+++ b/style.css
@@ -278,6 +278,9 @@ body {
     padding-left: 50px;
 }
 
+#page_home_hero_date {
+    color: darkviolet;
+}
 
 #page_home_hero_image img {
     width: 100%;
@@ -287,6 +290,7 @@ body {
     background-color: rgba(0, 0, 0, 0.2);
     padding: 50px;
     margin-bottom: 20px;
+    font-size: 20px;
 }
 
 
@@ -309,7 +313,7 @@ body {
         width: 100%;
         height: 300px;
         object-fit: cover;
-        object-position: 100% 55%;
+        object-position: 100% 42%;
     }
     .page_home_hero {
         padding-left: 0;
@@ -1558,8 +1562,6 @@ body {
 .calendar-options {
     color: black;
     text-align: left;
-    margin-top: .5rem;
-    padding: .5rem;
 }
 
 #add-to-calendar-checkbox-label {
