--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
     font-family: 'Rubik', sans-serif !important;
 }
 
+.border-top {
+    border-color: #74a892 !important;
+}
+
 .text-muted {
     font-size: 0.7em;
 }
